--- a/index.html
+++ b/index.html
@@ -7,13 +7,47 @@
   </head>
   <body>
     <header>
+      <!-- Name and profile picture-->
       <h1>Erica Morabito</h1>
+      <img id="profile" src="./profile pic 1.jpeg" alt="picture of Erica Morabito"></img>
+      <!-- Nav Bar-->
+      <nav>
+        <a href="#">Bio</a>
+        <a href="#">Work</a>
+        <a href="#">Contact Me</a>
+        <a href="#">Resume</a>
+      </nav>
     </header>
     <main>
-
+      <!-- 6 pictures of work -->
+      <div>
+        <section class="work">
+          <h2>Work Title</h2>
+          <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt=" "/>
+          <p>HTML/CSS</p>
+        </section>
+        <section class="work">
+          <h2>Work Title</h2>
+          <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt=" "/>
+          <p>HTML/CSS</p>
+        </section>
+        <section class="work">
+          <h2>Work Title</h2>
+          <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt=" "/>
+          <p>HTML/CSS</p>
+        </section>
+      </div>
+      <!-- Contact me form This is NOT a requirement-->
+      <form class="contact-me">
+        <label for="your-email">Your email:</label>
+        <input id="your-email"><br>
+        <label for="message">Your message:</label>
+        <input id="message"><br>
+        <button>Send</button>
+      </form>
     </main>
     <footer>
-
+      <p>This the the footer.</p>
     </footer>
   </body>
 </html>
