HTML basics, some CSS

--- a/index.html
+++ b/index.html
@@ -9,45 +9,80 @@
     <header>
       <!-- Name and profile picture-->
       <h1>Erica Morabito</h1>
-      <img id="profile" src="./profile pic 1.jpeg" alt="picture of Erica Morabito"></img>
       <!-- Nav Bar-->
       <nav>
-        <a href="#">Bio</a>
-        <a href="#">Work</a>
-        <a href="#">Contact Me</a>
-        <a href="#">Resume</a>
+        <a href="#">about</a>
+        <a href="#">work</a>
+        <a href="#">contact</a>
       </nav>
     </header>
     <main>
-      <!-- 6 pictures of work -->
-      <div>
-        <section class="work">
-          <h2>Work Title</h2>
-          <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt=" "/>
-          <p>HTML/CSS</p>
-        </section>
-        <section class="work">
-          <h2>Work Title</h2>
-          <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt=" "/>
-          <p>HTML/CSS</p>
-        </section>
-        <section class="work">
-          <h2>Work Title</h2>
-          <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt=" "/>
-          <p>HTML/CSS</p>
-        </section>
-      </div>
-      <!-- Contact me form This is NOT a requirement-->
-      <form class="contact-me">
-        <label for="your-email">Your email:</label>
-        <input id="your-email"><br>
-        <label for="message">Your message:</label>
-        <input id="message"><br>
-        <button>Send</button>
-      </form>
+      <!-- Home Art -->
+      <section>
+        <figure class="home-art">
+          <h2>full-stack web developer</h2>
+          <p>
+            I'm a full-stack web develper (in training!) based in Austin, Texas. I have wonderful projects coming. I love parks, tacos, and art.
+          </p>
+        </figure>
+      </section>
+
+       <!-- About me -->
+      <section class="about-me">
+        <div>
+          <figure>
+            <h2>About me</h2>
+            <img id="profile-pic" src="./profile pic 1.jpeg" alt="picture of Erica Morabito"></img>
+            <p>This is the paragraph talking about me. This is the paragraph talking about me. This is the paragraph talking about me.</p>
+          </figure>
+        </div>
+      </section>
+     
+      <!-- My work -->
+      <section class="my-work">
+        <div>
+          <figure class="work">
+            <h2>Title</h2>
+            <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
+            <p>
+              This is talking about the project.
+              This is talking about the project.
+              This is talking about the project.
+            </p>
+            <p>Language Used (HTML, CSS)</p>
+          </figure>
+        </div>
+        <div>
+          <figure class="work">
+            <h2>Title</h2>
+            <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
+            <p>
+              This is talking about the project.
+              This is talking about the project.
+              This is talking about the project.
+            </p>
+            <p>Language Used (HTML, CSS)</p>
+          </figure>
+        </div>
+        <div>
+          <figure class="work">
+            <h2>Title</h2>
+            <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
+            <p>
+              This is talking about the project.
+              This is talking about the project.
+              This is talking about the project.
+            </p>
+            <p>Language Used (HTML, CSS)</p>
+          </figure>
+        </div>
+        
+      </section>
     </main>
+
     <footer>
       <p>This the the footer.</p>
     </footer>
+
   </body>
 </html>
