--- a/index.html
+++ b/index.html
@@ -11,73 +11,60 @@
       <h1>Erica Morabito</h1>
       <!-- Nav Bar-->
       <nav>
-        <a href="#">about</a>
-        <a href="#">work</a>
+        <a href="/#about-me-section">about</a>
+        <a href="/#my-work">work</a>
         <a href="#">contact</a>
       </nav>
     </header>
     <main>
-      <!-- Home Art -->
+      <!-- Home Hello -->
       <section>
-        <figure class="home-art">
-          <h2>full-stack web developer</h2>
+        <figure class="home-hello">
+          <h2>Hi, I am</h2>
+          <p><span>Erica Morabito</span></p>
           <p>
-            I'm a full-stack web develper (in training!) based in Austin, Texas. I have wonderful projects coming. I love parks, tacos, and art.
+            Welcome, to my portfolio. 
+            I'm a full-stack web develper (in training!) based in Austin, Texas.
+            I have wonderful projects coming. I love parks, tacos, and art.
           </p>
         </figure>
       </section>
 
        <!-- About me -->
-      <section class="about-me">
-        <div>
-          <figure>
+      <section id="about-me-section">
+          <figure class="about-me">
             <h2>About me</h2>
+            <p>
+              I always wanted to code.
+              The UT Bootcamp gave me the opportunity to learn with expert programmers.
+              Today, I am excited to pursue a future in web development.
+            </p>
             <img id="profile-pic" src="./profile pic 1.jpeg" alt="picture of Erica Morabito"></img>
-            <p>This is the paragraph talking about me. This is the paragraph talking about me. This is the paragraph talking about me.</p>
           </figure>
-        </div>
       </section>
      
       <!-- My work -->
-      <section class="my-work">
-        <div>
+      <section id="my-work">
           <figure class="work">
-            <h2>Title</h2>
+            <h2><a href="#">Title</a></h2>
             <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
-            <p>
-              This is talking about the project.
-              This is talking about the project.
-              This is talking about the project.
-            </p>
-            <p>Language Used (HTML, CSS)</p>
+            <p class="project-description">This is the first project.</p>
+            <p class="language-used">HTML</p>
           </figure>
-        </div>
-        <div>
           <figure class="work">
-            <h2>Title</h2>
+            <h2><a href="#">Title</a></h2>
             <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
-            <p>
-              This is talking about the project.
-              This is talking about the project.
-              This is talking about the project.
-            </p>
-            <p>Language Used (HTML, CSS)</p>
+            <p class="project-description">This is the second project.</p>
+            <p class="language-used">HTML CSS</p>
           </figure>
-        </div>
-        <div>
           <figure class="work">
-            <h2>Title</h2>
+            <h2><a href="#">Title</a></h2>
             <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
-            <p>
-              This is talking about the project.
-              This is talking about the project.
-              This is talking about the project.
-            </p>
-            <p>Language Used (HTML, CSS)</p>
+            <p class="project-description">This is the third project.</p>
+            <p class="language-used">HTML CSS JavaScript</p>
           </figure>
-        </div>
-        
       </section>
+
     </main>
 
     <footer>
