Links on cards and title

--- a/index.html
+++ b/index.html
@@ -47,19 +47,25 @@
       <section id="my-work">
           <figure class="work">
             <h2><a href="#">Title</a></h2>
-            <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
+            <a href="https://github.com/ericaemorabito?tab=repositories" target="_blank">
+              <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="screenshot of project"/>
+            </a>
             <p class="project-description">This is the first project.</p>
             <p class="language-used">HTML</p>
           </figure>
           <figure class="work">
             <h2><a href="#">Title</a></h2>
-            <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
+            <a href="https://github.com/ericaemorabito?tab=repositories"target="_blank">
+              <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="screenshot of project"/>
+            </a>
             <p class="project-description">This is the second project.</p>
             <p class="language-used">HTML CSS</p>
           </figure>
           <figure class="work">
             <h2><a href="#">Title</a></h2>
-            <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="picture of Erica's work"/>
+            <a href="https://github.com/ericaemorabito?tab=repositories" target="_blank">
+              <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="screenshot of project"/>
+            </a>
             <p class="project-description">This is the third project.</p>
             <p class="language-used">HTML CSS JavaScript</p>
           </figure>
