README, work section and contact section updated

--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Erica Morabito's Portfolio</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./assets/style.css"/>
   </head>
   <body>
     <header>
-      <!-- Name and profile picture-->
       <h1>Erica Morabito</h1>
       <!-- Nav Bar-->
       <nav>
         <a href="/#about-me-section">about</a>
         <a href="/#my-work">work</a>
-        <a href="#">contact</a>
+        <a href="/#contact">contact</a>
       </nav>
     </header>
     <main>
@@ -25,7 +24,7 @@
           <p>
             Welcome, to my portfolio. 
             I'm a full-stack web develper (in training!) based in Austin, Texas.
-            I have wonderful projects coming. I love parks, tacos, and art.
+            I have wonderful projects coming.
           </p>
         </figure>
       </section>
@@ -35,47 +34,53 @@
           <figure class="about-me">
             <h2>About me</h2>
             <p>
-              I always wanted to code.
+              I always wanted to learn to code.
               The UT Bootcamp gave me the opportunity to learn with expert programmers.
               Today, I am excited to pursue a future in web development.
             </p>
-            <img id="profile-pic" src="./profile pic 1.jpeg" alt="picture of Erica Morabito"></img>
+            <img id="profile-pic" src="./assets/images/profile pic 1.jpeg" alt="picture of Erica Morabito"></img>
           </figure>
       </section>
-     
+
       <!-- My work -->
       <section id="my-work">
+        <!-- Refactored Webiste -->
           <figure class="work">
-            <h2><a href="#">Title</a></h2>
-            <a href="https://github.com/ericaemorabito?tab=repositories" target="_blank">
-              <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="screenshot of project"/>
+            <h2><a href="#">Refactored Website</a></h2>
+            <a href="https://ericaemorabito.github.io/week-1-challenge/" target="_blank">
+              <img src="./assets/images/Horiseon.png" alt="screenshot of project"/>
             </a>
-            <p class="project-description">This is the first project.</p>
-            <p class="language-used">HTML</p>
+            <p class="language-used">HTML CSS</p>
           </figure>
+          <!-- Upcomging Project #1-->
           <figure class="work">
-            <h2><a href="#">Title</a></h2>
+            <h2><a href="#">Upcoming Project</a></h2>
             <a href="https://github.com/ericaemorabito?tab=repositories"target="_blank">
               <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="screenshot of project"/>
             </a>
-            <p class="project-description">This is the second project.</p>
             <p class="language-used">HTML CSS</p>
           </figure>
+          <!-- Upcoming Project #2-->
           <figure class="work">
-            <h2><a href="#">Title</a></h2>
+            <h2><a href="#">Upcoming Project</a></h2>
             <a href="https://github.com/ericaemorabito?tab=repositories" target="_blank">
               <img src="https://cdn.britannica.com/77/170477-050-1C747EE3/Laptop-computer.jpg" alt="screenshot of project"/>
             </a>
-            <p class="project-description">This is the third project.</p>
             <p class="language-used">HTML CSS JavaScript</p>
           </figure>
       </section>
-
+      
     </main>
-
+    <!-- Contact Me-->
     <footer>
-      <p>This the the footer.</p>
+      <section id="contact">
+        <figure>
+          <h2>Contact</h2>
+          <p>123-456-7891</p>
+          <p><a href="#">email@gmail.com</a></p>
+          <p><a href="https://github.com/ericaemorabito">Github</a></p>
+        </figure>
+      </section>
     </footer>
-
   </body>
 </html>
