Responsive design working, READme complete, CSS commented

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <!-- Erica Morabito in top left corner-->
       <h1>Erica Morabito</h1>
       <!-- Nav Bar-->
       <nav>
@@ -28,7 +29,6 @@
           </p>
         </figure>
       </section>
-
        <!-- About me -->
       <section id="about-me-section">
           <figure class="about-me">
@@ -40,11 +40,10 @@
             </p>
             <img id="profile-pic" src="./assets/images/profile pic 1.jpeg" alt="picture of Erica Morabito"></img>
           </figure>
-      </section>
-
+        </section>
       <!-- My work -->
       <section id="my-work">
-        <!-- Refactored Webiste -->
+        <!-- Refactored Website -->
           <figure class="work">
             <h2><a href="#">Refactored Website</a></h2>
             <a href="https://ericaemorabito.github.io/week-1-challenge/" target="_blank">
@@ -69,7 +68,6 @@
             <p class="language-used">HTML CSS JavaScript</p>
           </figure>
       </section>
-      
     </main>
     <!-- Contact Me-->
     <footer>
