project card layout finished

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <img id="profile-pic" src="./assets/images/profile pic 1.jpeg" alt="picture of Erica Morabito"></img>
       </figure>
     </section>
+   
     <!-- My work -->
     <section id="projects">
 
@@ -102,12 +103,10 @@
   <!-- Contact Me-->
   <footer>
     <section id="contact">
-      <figure>
-        <h2>Contact</h2>
-        <p>123-456-7891</p>
-        <p><a href="#">email@gmail.com</a></p>
+        <h3>Contact</h3>
+        <p>512-354-9239</p>
+        <p><a href="mailto:ericaemorabito@gmail.com">Email me</a></p>
         <p><a href="https://github.com/ericaemorabito">Github</a></p>
-      </figure>
     </section>
   </footer>
   <script src="./script.js"></script>
