--- a/index.html
+++ b/index.html
@@ -77,6 +77,32 @@
         <p class="github"><a href="https://github.com/ericaemorabito/taste_makers.git" target="_blank">Github</a></p>
       </div>
 
+            <!-- Group Project 2 -->
+            <h2 class="headings">Some things I've built</h2>
+
+            <div class="project-card">
+              <p class="featured-project">Featured Project</p>
+              <a class="project-title" href="https://ericaemorabito.github.io/taste_makers/">Tastemakers Website</a>
+              <div class="project-description">
+                <p>
+                  Webpage where users can choose between four cuisine or three dessert options.
+                  User receives a list of options for recipes based on their choices.
+                  Presented with links, recipes, and videos.
+                </p>
+              </div>
+              <a href="https://intense-plateau-61191.herokuapp.com/" target="_blank">
+                <img class="project-image" src="./assets/images/Screen Shot 2022-11-16 at 10.48.51 AM.png" alt="screenshot of quacks site" />
+              </a>
+              <ul class="project-tech-list">
+                <li>Express.js</li>
+                <li>Sequelize</li>
+                <li>JavaScript</li>
+                <li>Bycrypt</li>
+                <li>Node.js</li>
+              </ul>
+              <p class="github"><a href="https://github.com/ericaemorabito/Quacks.git/" target="_blank">Github</a></p>
+            </div>
+
       <!-- Weather Dashboard -->
       <!-- <div class="work">
         <h2><a href="https://ericaemorabito.github.io/Weather_Dashboard/">Weather Dashboard</a></h2>
