--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div class="project-card">
               <p class="featured-project">Featured Project</p>
-              <a class="project-title" href="https://ericaemorabito.github.io/taste_makers/">Tastemakers Website</a>
+              <a class="project-title" href="https://ericaemorabito.github.io/taste_makers/">Quacks site</a>
               <div class="project-description">
                 <p>
                   Webpage where users can choose between four cuisine or three dessert options.
